# AIAJun_SrinjoyBahuti

./: Task 2 (Report).docx  task.py
PyMavlink/: offboard_PyMavlink_Task.py
PyMavlink_PX4_Gazebo/Task 1/: custom_World_1.world
PyMavlink_PX4_Gazebo/Task 2/: custom_world_2.world  iris.sdf.jinja
WASD_Drone_Task/: keyboard_input.py  keyboard_teleop.launch.py  package.xml  setup.cfg  setup.py  velocity_controller.py
